--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <body>
 
   <h1>Hello from html!</h1>
+  <div id="root"></div>
+
+  <script type="text/javascript" src="./public/bundle.js"></script>
 </body>
