--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<body>
+<!doctype html>
+<html>
+  <head>
+    <title>DnD Monster Database</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./public/style.css">
+  </head>
+  <body>
+      <div id="root"></div>
+      
+      <script type="text/javascript" src="./public/bundle.js"></script>
+    </body>
+</html>
 
-  <h1>Hello from html!</h1>
-  <div id="root"></div>
-
-  <script type="text/javascript" src="./public/bundle.js"></script>
-</body>
