--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./public/style.css">
     <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./public/font-awesome.min.css" >
   </head>
   <body>
       <div id="root"></div>
