--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>DnD Monster Database</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="./public/style.css">
     <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./public/font-awesome.min.css" >
